# Kalilab-2.0

./: .env.example  .gitignore  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  import_personnel_data.py  render.yaml  reset-and-restart.ps1  reset-et-rebuild.ps1  seed-demo.bat  start-backend.bat  start-frontend.bat  start.sh  update.ps1
.devcontainer/: devcontainer.json  setup.sh  start.sh
.github/workflows/: auto-merge-claude.yml  deploy-render.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  import_personnel.py  main.py  pyproject.toml  requirements.txt  seed.py  seed_arborescence.py  seed_pag_vanneste.py
backend/alembic/: env.py
backend/auth/: dependencies.py  security.py
backend/database/: engine.py  models.py
backend/routers/: actions.py  audit_trail.py  audits.py  auth.py  complaints.py  dashboard.py  documents.py  equipment.py  hr.py  kpi.py  messagerie.py  nonconformities.py  pag.py  redaction.py  risks.py  services.py  stock.py  users.py
backend/services/: audit_service.py  email_service.py  export_amdec.py  export_verification.py  pdf_service.py  storage_service.py  workflow_service.py
backend/tests/: conftest.py  test_auth.py  test_documents.py  test_nc.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: actions.ts  (+18 more)
scripts/: IQ20_TEST.xlsx  IQ20_rapport_S2_2025.md  iq20_analyse.py  iq20_generate_test_data.py
(+59 files in other folders)
