[tool.poetry]
name = "kalilab-backend"
version = "0.1.0"
description = "SMQ ISO 15189 - KaliLab Backend"
authors = ["KaliLab Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlmodel = "^0.0.16"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
reportlab = "^4.1.0"
boto3 = "^1.34.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
